# IOTCOSS

./: .env.example  .gitignore  README.md  desk_motor_controller_uno_r4_wifi.ino  pose2.py  pyproject.toml  서버실행코드.md
app/: __init__.py  analysis.py  api.py  cleanup_sessions.py  config.py  main.py  mobius.py  models.py  posture.py  realtime.py  store.py  suggestions.py  sync.py  topology.py
app/static/: app.js  index.html  style.css
arduino_codes/: AE to arduino  led.copy_20260720.ino
arduino_codes/button_lcd/: button_lcd.ino
arduino_codes/button_lcd_remake/: button_lcd_remake.ino
arduino_codes/desk/: desk.ino
arduino_codes/desk_light_and_buzzer/: desk_light_and_buzzer.ino
arduino_codes/led.copy_20260720/: led.copy_20260720.ino
arduino_codes/motor/: motor.ino
arduino_codes/motor_step_test/: motor_step_test.ino
arduino_codes/test/: test.ino
cloudflare/: config.yml.example
raspberry_pi_codes/: camera.py  camera2.py  demo.py  main.py  main_plan.py  pose.py  pose2.py  test.py  yolo.py
raspberry_pi_codes/test/: camera.py  camera2.py  main.py  main_plan.py  pose.py  server.py  yolo2
scripts/: set_public_url.ps1
tests/: test_api.py  test_suggestions.py  test_sync.py
